1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1999-02-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.h (InFile): Add a warning about error return behavior.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* simtools.[hm] (initSwarmApp, initSwarmAppOptions): Remove
	batchMode arguments.
	(initSwarmAppBatch, initSwarmAppOptionsBatch): Add new functions,
	have the effect of setting the batchMode internally.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtools.[hm] (initSwarmBatch): New function.
	(initSwarmApp, initSwarmAppOptions): Add batchMode argument.

1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtools.m (init): Don't setup any error or warning types.

	* UName.m ([UName -createEnd]): Use InvalidArgument instead of
	UNameError.
	
	* UName.[hm]: Remove UNameError.

	* NSelect.m ([NSelect +select:from:into:]): Use InvalidArgument
	instead of creating NSelectTooMany.

	* NSelect.[hm]: Remove NSelectTooMany.

	* AppendFile.m ([AppendFile +create:withName:]): Don't
	raise an event if file fails to open, just return nil.

	* OutFile.m, InFile.m: Likewise.

	* InFile.[hm]: Remove CannotOpenInFile.

	* OutFile.[hm]: Remove CouldOpenOut

	* ObjectLoader.[hm]: Remove CouldNotInitializeObjectLoader.

	* ObjectLoader.m ([ObjectLoader +_crash_:]): Use LoadError
	from defobj.  

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ObjectLoader.m, ObjectSaver.m: Don't include stdio.h.

	* AppendFile.m, InFile.m, OutFile.m: Include misc.h instead of stdio.h.

1998-12-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtools.m (init): New internal function.
	(initSwarm, initSwarmApp, initSwarmAppFunc, initSwarmArguments,
	initSwarmAppArguments): Use it.

	* simtools.[hm] (initSwarmAppFunc): New function.
	(swarmGUIMode): Make boolean.
