@@ -1,3 +1,7 @@
+1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* simtools.h: Add CREATABLE tags to all non-abstract protocols.
+
 1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.
